--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea/
 # Byte-compiled / optimized / DLL files
 __pycache__/
-Ex1/__pycache__/
+Selenium_testing/__pycache__/
 *.py[cod]
 *$py.class
 .pytest_cache
